--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Memory Matrix</title>
     
     <link rel="stylesheet" href="style.css">
-    <script src="fontawesome-all.min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     
 </head>
 <body>
