add checked attribute

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        </label>
        <label class="radio-container">
             4x4
-            <input type="radio" name="tiles-number" value="16">
+            <input type="radio" name="tiles-number" checked="checked" value="16">
             <span class="checkmark"></span>
         </label>
         <label class="radio-container">
